--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,7 @@
             <h2>Our Location</h2>
             <div class="map">
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.635716848369!2d-122.08424968434272!3d37.4219999798254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb24d6311f76d%3A0x5a60cba1b5bdbf51!2sGoogleplex!5e0!3m2!1sen!2sus!4v1615991553171!5m2!1sen!2sus" 
-                    width="400" 
-                    height="350" 
-                    style="border:0;" 
-                    allowfullscreen="" 
-                    loading="lazy">
+                    <div style="text-decoration:none; overflow:hidden;max-width:100%;width:300px;height:400px;"><div id="canvas-for-googlemap" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=harinagar+&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embed-ded-maphtml" href="https://www.bootstrapskins.com/themes" id="authorize-map-data">premium bootstrap themes</a><style>#canvas-for-googlemap img{max-height:none;max-width:none!important;background:none!important;}</style></div>
                 </iframe>
             </div>
         </section>
