--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,12 @@
             <h2>Our Location</h2>
             <div class="map">
                 <iframe 
-                    <div style="text-decoration:none; overflow:hidden;max-width:100%;width:300px;height:400px;"><div id="canvas-for-googlemap" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=harinagar+&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embed-ded-maphtml" href="https://www.bootstrapskins.com/themes" id="authorize-map-data">premium bootstrap themes</a><style>#canvas-for-googlemap img{max-height:none;max-width:none!important;background:none!important;}</style></div>
+                src="https://www.google.com/maps/embed/v1/place?q=harinagar+kar&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" 
+                    width="400" 
+                    height="350" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy">    
                 </iframe>
             </div>
         </section>
