--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
-                <li><a href="https://naveenkumar2313.github.io/sonish-team/cart.html">Cart (<span id="cart-count">0</span>)</a></li>
-                <li><a href="https://naveenkumar2313.github.io/sonish-team/contact.html">Contact</a></li>
+                <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -89,3 +89,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
