--- a/checkout.html
+++ b/checkout.html
@@ -11,10 +11,10 @@
         <h1>Checkout</h1>
         <nav>
             <ul>
-                <li><a href="https://naveenkumar2313.github.io/sonish-team/index.html">Home</a></li>
-                <li><a href="https://naveenkumar2313.github.io/sonish-team/index.html">Menu</a></li>
-                <li><a href="https://naveenkumar2313.github.io/sonish-team/cart.html">Cart (<span id="cart-count">0</span>)</a></li>
-                <li><a href="https://naveenkumar2313.github.io/sonish-team/contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Menu</a></li>
+                <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -49,3 +49,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
